FIX getallusers(not friends), delete status and dob with shortProfile, now exist only shortProfile
